--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.21.1",
-    "express": "^4.21.1",
+    "express": "^4.17.1",
     "googleapis": "^78.0.0"
   },
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "HD",
   "license": "ISC",
-  "description": ""
+  "description": "A Google Forms trigger script using Express, Axios, and Google APIs"
 }
